mise à jour  forme
ajout de bcp de CSS

--- a/style.css
+++ b/style.css
@@ -23,4 +23,63 @@
     font-size: 1rem;
     margin-left:290px;
 }
+#filelinux {
+    padding-right: 100px;
+    font-size: 1rem;
+    margin-left:280px;
+}
+
+
+html {
+    background: linear-gradient(105deg, rgba(151, 148, 148, 0.2) 39%, rgba(152, 157, 158, 0.459) 96%) center center / 1500px 1100px no-repeat,
+    url() center no-repeat, rgb(254, 255, 254);
+    background-attachment: scroll;
+  }
+  
+  h2 {
+    margin-left:900px;
+    margin-top: 100px;
+  }
+  h3 {
+    margin-left:230px;
+    margin-bottom:20px;
+  }
+  p,h4{
+    margin-left:220px;
+    margin-bottom:20px;
+    font-size: large; }
+    
+  #see {
+    background-color: #c7b4b4; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 193px;
+  }
+  #DL {
+    background-color: #c7b4b4; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 10px 10px 10px 10px;
+    margin-right: 30px;
+      }
+
+    #fit-picture{
+        height:270px ;
+        width: 2000px;
+
+      }
+
+
+
+      
 
