--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ height: 200px;
   }
   
   h2 {
+    margin-left:800px;
+    margin-top: 100px;
+    text-align:justify;
+  }
+  h2 {
     margin-left:900px;
     margin-top: 100px;
     text-align:justify;
@@ -102,6 +107,12 @@ top: -10px;
 margin-right: 10px;
 width : 1900px;
 height: 270px;
+}
+
+#projet{
+  text-align:justify;
+  margin-top: 300px;
+  margin-right:  60px ;
 }
         
 
