--- a/style.css
+++ b/style.css
@@ -114,7 +114,21 @@ height: 270px;
   margin-top: 300px;
   margin-right:  60px ;
 }
-        
+
+#merise {
+  
+  width: 547px;
+  height: 326px;
+ 
+}
+
+#MLD {
+  margin-left: 800px;
+}
+ 
+#I2{
+  margin-left: 620px; 
+}
 
 
       
