--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 #nom {
   text-align:justify;
-  margin-top: 250px;
+  margin-top: 0px;
   margin-right: 400px ;
 }
 
@@ -78,6 +78,9 @@ height: 200px;
     font-size: large;
     text-align:justify;  }
   
+    #pres{
+      margin-top : 100px;
+    }
  
     
   #see {
@@ -240,3 +243,126 @@ nav > ul > li:hover > a{
 nav li {
   list-style-type: none ;       /* Suppression des puces */
 }
+
+
+.row {
+  margin-top : 100px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.indentation{
+  text-indent: 20px;
+  text-align: justify;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.indentation-list{
+  text-indent: 60px;
+  text-align: justify;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  color: #6f6f6f;
+  font-weight: 400;
+  line-height: 24px;
+}
+body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+}
+.font-w-600 {
+  font-weight:600;
+  margin-top: 200px;
+}
+
+.font-alt {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500px ;
+} 
+.center-text {
+  margin: auto;
+}
+.titre-page{
+  background-position: top;
+  background-image: url(image/pro3.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 105%;
+  height: 300px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  margin-bottom: 10px;
+}
+.color-theme {
+	color: #552c1f;	
+}
+.color-white {color:#FFF}
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #868e96;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #868e96;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  --font-family-monospace: "SFMono-Regular",Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+}
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+.col-md-12,
+.col-md-6{
+  margin-top :200px;
+  margin-left: 200px;
+  position:static;
+  width:100%;
+  min-height:1px;
+  padding-right:15px;
+  padding-left:15px
+ }
