--- a/style.css
+++ b/style.css
@@ -299,14 +299,14 @@ nav li {
 }
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 12px;
+  font-size: 12vw;
   color: #6f6f6f;
   font-weight: 400;
   line-height: 24px;
 }
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 1rem;
+  font-size: 1vw;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
