--- a/style.css
+++ b/style.css
@@ -72,18 +72,26 @@ height: 200px;
     margin-bottom:20px;
     text-align:justify;  
   }
-  p,h4{
+  h4{
     margin-left:220px;
     margin-bottom:20px;
     font-size: large;
     text-align:justify;  }
+    p{
+    margin-left:220px;
+    margin-bottom:20px;
+    font-size: large;
+    text-align:justify; 
+    }
 
     #bdd{
       margin-top:10px;
       margin-left:-15px;
     }
     
-    
+    .tableau{
+      margin-right: 200px;
+    }
   
     #pres{
       margin-top : 100px;
@@ -114,6 +122,19 @@ height: 200px;
     margin-right: 30px; 
      
       }
+      #bouton_Projet {
+        background-color: #c7c2c2; 
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        border-radius: 10px 10px 10px 10px;
+        margin-left: 600px; 
+         
+          }
   a.nounderline:link 
 { 
  text-decoration:none; 
@@ -150,7 +171,7 @@ height: 270px;
 }
 
 #veille {
-  margin-left: 650px;
+  margin-right : 30px;
 
 }
 
