ajout footer et suppression de compétence

--- a/style.css
+++ b/style.css
@@ -482,3 +482,8 @@ html {
       .conteneur{
         margin-top: 60px;
       }
+      footer {
+        padding: 10px 20px;
+        background: #ffffff;
+        color: white;
+      }
